# 78ham-nrlesp32

./: .gitignore  78ham-nrlesp32.ino  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  partitions.csv  platformio.ini  sdkconfig.defaults
data/: config.example.json
docs/: architecture.md  bringup.md  wiring.md
include/: config.h  pins.h
main/: CMakeLists.txt  app_config.cpp  app_config.h  app_main.cpp  audio.cpp  audio.h  board_pins.h  display.cpp  display.h  keys.cpp  keys.h  network.cpp  network.h  nrl21.cpp  nrl21.h  nrl_api.cpp  nrl_api.h  web_config.cpp  web_config.h
src/: app_config.cpp  app_config.h  audio.cpp  audio.h  config.h  keys.cpp  keys.h  main.cpp  network.cpp  network.h  nrl21.cpp  nrl21.h  pins.h  state.cpp  state.h  storage.cpp  storage.h  ui.cpp  ui.h  web_config.cpp  web_config.h
